syntax = "proto3";

package executorGRPC;

service Commander {
	 rpc ExecuteCommand (CommandMessage) returns (StatusMessage) {}
}


message StatusMessage {
	optional string status = 1;
	optional string error = 2;
}

message CommandMessage {
	optional string IP = 1;
	optional string script = 2;
	optional string scriptName = 3;
}

